--- a/apriltag_ros_/config/tags.yaml
+++ b/apriltag_ros_/config/tags.yaml
@@ -1,22 +1,69 @@
-/**:
-    ros__parameters:
-        image_transport: raw    # image format
-        family: 36h11           # tag family name
-        size: 0.173             # tag edge size in meter
-        max_hamming: 0          # maximum allowed hamming distance (corrected bits)
+# # Definitions of tags to detect
+#
+# ## General remarks
+#
+# - All length in meters
+# - 'size' refers to the length of the shared border between solid black and solid white rectangle.
+#   See README.md or https://github.com/AprilRobotics/apriltag/wiki/AprilTag-User-Guide#pose-estimation for details.
+# - Ellipsis (...) signifies that the previous element can be repeated multiple times.
+#
+# ## Standalone tag definitions
+# ### Remarks
+#
+# - name is optional
+#
+# ### Syntax
+#
+# standalone_tags:
+#   [
+#     {id: ID, size: SIZE, name: NAME},
+#     ...
+#   ]
+standalone_tags:
+  [
+    {id: 0, size: 0.162, name: "id_0"},
+    {id: 1, size: 0.162, name: "id_1"},
+    {id: 2, size: 0.162, name: "id_2"},
+    {id: 3, size: 0.162, name: "id_3"},
+    {id: 4, size: 0.162, name: "id_4"},
+    {id: 5, size: 0.162, name: "id_5"},
+    {id: 6, size: 0.162, name: "id_6"},
+    {id: 7, size: 0.162, name: "id_7"},
+    {id: 8, size: 0.162, name: "id_8"},
+    {id: 9, size: 0.162, name: "id_9"},
+    {id: 10, size: 0.162, name: "id_10"},
+    {id: 11, size: 0.162, name: "id_11"},
+    {id: 12, size: 0.162, name: "id_12"},
+    {id: 13, size: 0.162, name: "id_13"},
+    {id: 14, size: 0.162, name: "id_14"},
+    {id: 15, size: 0.162, name: "id_15"},
+    {id: 16, size: 0.162, name: "id_16"},
+    {id: 17, size: 0.162, name: "id_17"},
+    {id: 18, size: 0.162, name: "id_18"},
+    {id: 19, size: 0.162, name: "id_19"}
+  ]
 
-        # see "apriltag.h" 'struct apriltag_detector' for more documentation on these optional parameters
-        detector:
-            threads: 1          # number of threads
-            decimate: 2.0       # decimate resolution for quad detection
-            blur: 0.0           # sigma of Gaussian blur for quad detection
-            refine: True        # snap to strong gradients
-            sharpening: 0.25    # sharpening of decoded images
-            debug: False        # write additional debugging images to current working directory
-
-        # optional list of tags
-        tag:
-            ids: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]            # tag ID
-#            frames: [base, object]  # optional frame name
-#            sizes: [0.162, 0.162]   # optional tag-specific edge size
-
+# ## Tag bundle definitions
+# ### Remarks
+#
+# - name is optional
+# - x, y, z have default values of 0 thus they are optional
+# - qw has default value of 1 and qx, qy, qz have default values of 0 thus they are optional
+#
+# ### Syntax
+#
+# tag_bundles:
+#   [
+#     {
+#       name: 'CUSTOM_BUNDLE_NAME',
+#       layout:
+#         [
+#           {id: ID, size: SIZE, x: X_POS, y: Y_POS, z: Z_POS, qw: QUAT_W_VAL, qx: QUAT_X_VAL, qy: QUAT_Y_VAL, qz: QUAT_Z_VAL},
+#           ...
+#         ]
+#     },
+#     ...
+#   ]
+tag_bundles:
+  [
+  ]
