--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -21,7 +21,28 @@
 #   ]
 standalone_tags:
   [
+    {id: 0, size: 0.162, name: "id_0"},
+    {id: 1, size: 0.162, name: "id_1"},
+    {id: 2, size: 0.162, name: "id_2"},
+    {id: 3, size: 0.162, name: "id_3"},
+    {id: 4, size: 0.162, name: "id_4"},
+    {id: 5, size: 0.162, name: "id_5"},
+    {id: 6, size: 0.162, name: "id_6"},
+    {id: 7, size: 0.162, name: "id_7"},
+    {id: 8, size: 0.162, name: "id_8"},
+    {id: 9, size: 0.162, name: "id_9"},
+    {id: 10, size: 0.162, name: "id_10"},
+    {id: 11, size: 0.162, name: "id_11"},
+    {id: 12, size: 0.162, name: "id_12"},
+    {id: 13, size: 0.162, name: "id_13"},
+    {id: 14, size: 0.162, name: "id_14"},
+    {id: 15, size: 0.162, name: "id_15"},
+    {id: 16, size: 0.162, name: "id_16"},
+    {id: 17, size: 0.162, name: "id_17"},
+    {id: 18, size: 0.162, name: "id_18"},
+    {id: 19, size: 0.162, name: "id_19"}
   ]
+
 # ## Tag bundle definitions
 # ### Remarks
 #
